# ArmaLLM

./: .gitignore  README.md  pyproject.toml
data-tools/: data-scraper.py  data-sorter.py  scraper.yml
dataset/raw/: raw_wiki_data.json
